--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,11 @@ p {
   }
 
   .cta {
-    display: block;
+    display: inline-block;
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
     font-family: 'Ubuntu', Sans-Serif;
     font-size: 16px;
     font-weight: 400;
@@ -85,4 +84,5 @@ p {
     padding-bottom: 12px;
     padding-right: 16px;
     padding-left: 16px;
+    cursor: pointer;
   }
